--- a/course.html
+++ b/course.html
@@ -354,6 +354,7 @@
 
             let order;
             try {
+                // --- UPDATED URL ---
                 const response = await fetch('https://createorder-r6zyxpljua-uc.a.run.app', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -378,6 +379,7 @@
                 order_id: order.id,
                 handler: async function (response) {
                     try {
+                        // --- UPDATED URL ---
                         const verificationResponse = await fetch('https://verifypayment-r6zyxpljua-uc.a.run.app', {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
